# dotfiles

./: .Rprofile  .gitignore  .globalrc  .tmux.conf  .zshenv  .zshrc  Brewfile.linux  Brewfile.macos  README.md  link.sh  setup.sh
.config/glaze_wm/: config.yaml
.config/iTerm2/: README.md  com.googlecode.iterm2.plist
.config/key_remap/linux/: README.md  config.py  start_xkeysnail.sh  xkeysnail.service
.config/key_remap/macos/karabiner/: karabiner.json
.config/key_remap/windows/: README.md  config.py
.config/nvim/: .prompt.toml  init.vim  minimalvimrc
.config/nvim/dein/: dein.toml  dein_ddc.toml  dein_ddu.toml  dein_go.toml  dein_js.toml  dein_lazy.toml  dein_lsp.toml  dein_python.toml  dein_syntax.toml  dein_web.toml
.config/nvim/plugins/: ale.vim  avante.lua  codecompanion.lua  dap.lua  ddc.vim  ddu_add.vim  ddu_source.vim  ddu_ui_ff.vim  ddu_ui_filer.vim  defx.vim  denite.vim  denite_add.vim  denite_source.vim  deoplete.vim  fugitive.vim  lightline.vim  lsp.lua  lsp.vim  neosnippet.vim  nerdtree.vim  quickrun.vim  semshi.vim  vim-fugitive.vim
.config/nvim/rc/: base.vim  color.vim  dein.vim  map.vim
.config/ranger/: scope.sh
.config/vscode/: keybindings.json  settings.json
.config/wezterm/: wezterm.lua
.py3/: Pipfile  pyproject.toml
zsh/: alias.zsh  bindkey.zsh  completions.zsh  env.zsh  sheldon.plugins.toml  sync.zsh
