[tool.poetry]
name = "linter"
version = "0.1.0"
description = ""
authors = ["Ttayu <sample@sample.sample>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
black = "^19.10b0"
flake8 = "^3.7.9"
autopep8 = "^1.5"
isort = "^4.3.21"
yapf = "^0.29.0"
python-language-server = "^0.31.8"
pynvim = "^0.4.1"
vim-vint = "^0.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
