[tool.poetry]
name = "linter"
version = "0.1.0"
description = ""
authors = ["Ttayu <sample@sample.sample>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
mypy = "^0.910"
black = "^21.12b0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
isort = "^5.10.1"
yapf = "^0.31.0"
pynvim = "^0.4.3"
vim-vint = "^0.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
